tests/mm0_mmu/fail/bad-sort3124.mmu
-- bad modifier order
(sort s3124 provable pure strict free)